Fix modal on mobiles

--- a/css/gifts.css
+++ b/css/gifts.css
@@ -151,12 +151,14 @@ dialog::backdrop {
 
 .description {
   height: 284px;
+  width: 100%;
   background-color: white;
   border-radius: 20px;
   padding: 20px 20px;
   display: flex;
   flex-direction: column;
   gap: 20px;
+  box-sizing: border-box;
 }
 
 .description_container {
